--- a/.binder/Dockerfile
+++ b/.binder/Dockerfile
@@ -1,5 +1,5 @@
-FROM rocker/binder:3.6.0
-LABEL maintainer='Karthik Ram'
+FROM rocker/binder:4.0.2
+LABEL maintainer='Steven Kambouris'
 USER root
 COPY . ${HOME}
 RUN chown -R ${NB_USER} ${HOME}
@@ -7,6 +7,6 @@ USER ${NB_USER}
 
 
 
-RUN wget https://github.com/karthik/binder-test/raw/master/DESCRIPTION && R -e "options(repos = list(CRAN = 'http://mran.revolutionanalytics.com/snapshot/2019-10-24/')); devtools::install_deps()"
+RUN wget https://github.com/stevekambouris/test-holepunched-ma/raw/master/DESCRIPTION && R -e "options(repos = list(CRAN = 'http://mran.revolutionanalytics.com/snapshot/2021-03-02/')); devtools::install_deps()"
 
 RUN rm DESCRIPTION.1; exit 0
